# BootlegSpaceInvaders

./: CMakeLists.txt  README.md
SpaceInvaders/: CMakeLists.txt
SpaceInvaders/ctr/: collisionController.h  environmentController.h  healthController.h  scoreController.h
SpaceInvaders/inc/: invader.h  laser.h  shield.h  ship.h
SpaceInvaders/res/sfx/: SOURCE.txt
SpaceInvaders/src/: collisionController.cpp  environmentController.cpp  healthController.cpp  invader.cpp  laser.cpp  main.cpp  scoreController.cpp  shield.cpp  ship.cpp
